client/src/styles/Dashboard.css
.dashboard {
  transition: all 0.3s ease-in-out;
  display: grid;
  justify-content: center;
  height: 100vh;
  margin: 0 auto;
  max-height: 100vh;
}

/* 
       Dashboard Grid
        ---------------

      > 1005px (Desktop)
      sidebar | main | widgets/petwidgets


      501 - 1004px (Tablet)
      sidebar | main
                petwidgets


      0-501 px (Mobile)
        sidebar
        petwidgets
        main
        
*/

@media (min-width: 501px) and (max-width: 1004px) {
  .dashboard {
    grid-template-columns: auto 1fr;
    max-width: 705px;
  }
}
@media (min-width: 1005px) {
  .dashboard {
    grid-template-columns: auto 600px minmax(290px, 380px);
    padding: 0 10px;
    box-sizing: content-box;
  }
}

.dashboard::-webkit-scrollbar {
  /* Hide scroll bar */
  display: none;
  scrollbar-width: none;
}

